Avoid manual creation of Boolean instances.